Fix select on smaller screens

--- a/public/style.scss
+++ b/public/style.scss
@@ -33,6 +33,7 @@
       background-repeat: no-repeat;
       background-position: 90% center;
       background-size: 12px;
+      padding: 7px;
     }
   }
 
@@ -121,7 +122,6 @@
         margin: 5px;
         text-align: center;
       }
-
     }
 
     input[type="button"],
@@ -170,7 +170,6 @@
       width: 78px;
       height: 33px;
       font-size: 16px;
-      padding: 7px;
     }
   }
 
@@ -267,7 +266,7 @@
       width: 85px;
       height: 50px;
       font-size: 20px;
-      padding: 4px;
+      // padding: 4px;
     }
   }
 
